# ngt-chatbot-proxy

./: .env.production  .gitignore  README.md  SQA_REPORT.md  index.html  package-lock.json  tmpclaude-eede-cwd  wrangler.toml
Chatbot/: .env.example  .gitignore  Dockerfile  README.md  cli_chat.py  cloudbuild.yaml  config.py  docker-compose.yml  embeddings.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  scraper.py  sentiment.py  translation_extractor.py  utils.py  vector_store.py
ContactApi/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json
ContactApi/src/: db.ts  index.ts  main.rs
Database/: .env.example  README.md  docker-compose.yml
Database/init/: 01-schema.sql
cloudflare/: chatbot-proxy-worker.js
nginx/: chatbot.conf
project_docs/ai_history/: 002-hero-redesign.md  003-orange-theme-update.md  004-chatbot-theme-fixes.md  005-dark-theme-cicd-fixes.md  006-dark-theme-implementation.md  007-missing-service-pages.md  008-multi-language-support.md  009-comprehensive-service-translations.md  010-service-translation-completion.md  011-portfolio-translations-cd-fix.md  012-chatbot-proxy-ui-update.md  013-animated-background.md  014-complete-service-translations.md  015-softcoded-chatbot-backend.md  016-ngt-deployment-verification.md  017-service-updates-3d-video.md  018-home-stats-redesign.md  019-ui-dark-theme-checkmarks.md  020-3d-video-full-translations.md  021-chatbot-translation-fix.md  022-pricing-document-implementation.md  023-blog-card-pricing-update.md  (+2 more)
src/: vite-env.d.ts
src/components/: Footer.tsx  (+3 more)
(+23 files in other folders)
